force-app/main/default/objects/SecureLogEntry__c/SecureLogEntry__c.object-meta.xml
<CustomObject>
    <description>Secure log records that store logging information on a record/callout level</description>
    <label>Secure Log Entry</label>
    <nameField>
        <displayFormat>SLE-{0000}</displayFormat>
        <label>Secure Log Entry Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Secure Log Entries</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>