force-app/main/default/objects/SecureLogEntry__c/fields/ApexClassName__c.field-meta.xml
<CustomField>
    <fullName>ApexClassName__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Name of the apex class the secure log entry was created from.</description>
    <label>Apex Class Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>