force-app/main/default/objects/SecureLogEntry__c/fields/ApexMethodName__c.field-meta.xml
<CustomField>
    <fullName>ApexMethodName__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>The apex method the secure log entry was created for.</description>
    <label>Apex Method Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>