force-app/main/default/objects/SecureLogEntry__c/fields/Log__c.field-meta.xml
<CustomField>
    <fullName>Log__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The parent log record.</description>
    <label>Log</label>
    <referenceTo>Log__c</referenceTo>
    <relationshipLabel>Secure Log Entries</relationshipLabel>
    <relationshipName>Secure_Log_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>