force-app/main/default/objects/SecureLogEntry__c/fields/Payload__c.field-meta.xml
<CustomField>
    <fullName>Payload__c</fullName>
    <complianceGroup>Integrity - Accurate;Source - Salesforce;Source - Fabric;Source - OCV;Privacy - Personal Information</complianceGroup>
    <description>The payload that is sent or received which contains transaction/card/customer details.</description>
    <label>Payload</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>