force-app/main/default/objects/SecureLogEntry__c/fields/RecordsJson__c.field-meta.xml
<CustomField>
    <fullName>RecordsJson__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>The json format of a single or a list of record(s).</description>
    <label>Records Json</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>